# QtDemo

cmake_win_demo/: CMakeLists.txt  main.cpp
pdf_word_convertor/: ApplicationDemo1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
qml_win_demo/: CMakeLists.txt  main.qml
qml_win_demo2/: CMakeLists.txt  main.cpp  main.qml
qt_win_demo/: CMakeLists.txt  Hello.cpp  Hello.h  build.bat  main.cpp  main.qml
